tenace (0.16-2) UNRELEASED; urgency=medium

  [ Helmut Grohne ]
  * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure. (Closes: #923147)

 -- Helmut Grohne <helmut@subdivi.de>  Sun, 24 Feb 2019 13:21:28 +0100

tenace (0.16-1) unstable; urgency=medium

  * New upstream version.
    + Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
    + Fix handling of board numbers in menu callback. Closes: #879455.

 -- Christoph Berg <myon@debian.org>  Sun, 23 Sep 2018 15:04:05 +0200

tenace (0.15-1) unstable; urgency=medium

  * New upstream version.
    + Adapt glib-genmarshal call to new syntax. Closes: #871082.

 -- Christoph Berg <myon@debian.org>  Mon, 21 Aug 2017 20:04:07 +0200

tenace (0.14-1) unstable; urgency=medium

  * New upstream version.
    + Font handling improved. Closes: #515572.
    + Support lin files starting with qx||. Closes: #680912.
  * Install desktop file and icon. Closes: #738041.

 -- Christoph Berg <myon@debian.org>  Sun, 12 Jun 2016 15:39:54 +0200

tenace (0.13-1) unstable; urgency=low

  * New upstream version.
    + Links with -lm. Closes: #704794.
    + Set dealer and vulnerability correctly on new boards. Closes: #668003.
  * Drop Suggests: gnome-games-extra-data, doesn't exist anymore. Thanks to
    Jeremy Bicha for spotting.

 -- Christoph Berg <myon@debian.org>  Fri, 04 Oct 2013 22:01:11 +0200

tenace (0.12-1) unstable; urgency=low

  * New upstream version.
    + Fixes building with --as-needed. Closes: #632104.
    + Updates for two yet another new locations of gnome-card-data svg files.
    + handdisplay: include glib.h directly. Closes: #665618.

 -- Christoph Berg <myon@debian.org>  Wed, 06 Jul 2011 16:42:37 +0200

tenace (0.11-1) unstable; urgency=low

  * New upstream version.
    + "Open in web" shows the current deal on
      http://www.bridgebase.com/tools/handviewer.html. Closes: #522047.

 -- Christoph Berg <myon@debian.org>  Thu, 10 Feb 2011 00:24:33 +0100

tenace (0.10-1) unstable; urgency=low