@@ -3,6 +3,9 @@ tenace (0.16-2) UNRELEASED; urgency=medium
   [ Helmut Grohne ]
   * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure. (Closes: #923147)
 
+  [ Christoph Berg ]
+  * Simplify debian/rules. (Don't run dh_autoreconf, doesn't work yet.)
+
  -- Helmut Grohne <helmut@subdivi.de>  Sun, 24 Feb 2019 13:21:28 +0100
 
 tenace (0.16-1) unstable; urgency=medium
